packages/app/src/components/SelectionRouter/SelectIModel.scss
/*---------------------------------------------------------------------------------------------
 * Copyright (c) Bentley Systems, Incorporated. All rights reserved.
 * See LICENSE.md in the project root for license terms and full copyright notice.
 *--------------------------------------------------------------------------------------------*/
.title-section {
  margin: 10px calc(var(--responsive-grid-margin, 64px) - 3px);
}

.tile-with-status.iui-tile {
  position: relative;

  &.hollow-shell * {
    pointer-events: none;
  }

  > .iui-content {
    position: unset;

    > .iui-metadata {
      position: absolute;
      bottom: 5px;
    }
  }

  .tile-status {
    border-top: 1px solid gray;
    margin-bottom: -12px;
    margin-left: -12px;
    margin-right: -12px;
    padding: 12px;
    box-sizing: border-box;

    .iui-text-block {
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }
  }
}

